[package]
name = "rust-user-space"
version = "0.1.0"
authors = ["TaRaKa <git@tomrawcliffe.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"
nix = "*"

[[bin]]
name = "sh"
path = "src/sh.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"