[package]
name = "rust-user-space"
version = "0.1.0"
authors = ["TaRaKa <git@tomrawcliffe.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "*"
clap = { version = "*", features = ["derive"] }

[[bin]]
name = "sh"
path = "src/sh.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "init"
path = "src/init.rs"